--- a/src/components/Galaxy.css
+++ b/src/components/Galaxy.css
@@ -2,4 +2,20 @@
   width: 100%;
   height: 100%;
   position: relative;
+  will-change: transform;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  background-color: #000000 !important;
+  overflow: hidden !important;
+}
+
+.galaxy-container canvas {
+  background-color: #000000 !important;
+  display: block !important;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
 }
